--- a/html/beginning.html
+++ b/html/beginning.html
@@ -30,9 +30,12 @@
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>乌托邦式的无错信道在现实中存在吗<br></p>
     <form>
-        <input type="radio" id="selection1" value="我是选项1" name="ques">存在，虽然我不知道在哪<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">不存在，这只是用来思考的理想化模型<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">不知道，万一存在呢<br><br>
+        <label for="selection1">A: 存在，虽然我不知道在哪</label>
+        <input type="radio" id="selection1" value="我是选项1" name="ques"><br>
+        <label for="selection2">B: 不存在，这只是用来思考的理想化模型</label>
+        <input type="radio" id="selection2" value="我是选项2" name="ques"><br>
+        <label for="selection3">C: 不知道，万一存在呢</label>
+        <input type="radio" id="selection3" value="我是选项3" name="ques"><br><br>
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
@@ -56,7 +59,9 @@
     <img id="blocks7" class="blocks" src="../images/blocks.png">
     <img id="blocks8" class="blocks" src="../images/blocks.png">
 -->
-    <video src="../video/prefect1.mp4" id="video" class="video"></video>
+    <video id="video" class="video" onended="show_question()">
+        <source src="../video/prefect1.mp4" type="video/mp4">
+    </video>
 
 </div>
 
@@ -119,7 +124,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.beginning()) {
                 triggerRightPanels();
-                isPlaying = true;
+                $("#video").play()
             }
         }, 500);
     }
