--- a/html/computerMajor.html
+++ b/html/computerMajor.html
@@ -81,7 +81,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.atFault()) {
                 triggerRightPanels();
-                isPlaying = true;
+                $("#video").play();
             }
         }, 500);
     }
