--- a/new-index.html
+++ b/new-index.html
@@ -32,7 +32,7 @@
 <p>（程序猿和程序狗因为老板的蛮横的命令，在北京的程序猿必须给在上海的程序狗送砖头过去才行，他们需要保证不出任何差错地完成任务，还需要满足老板日益增加的效率需求。）</p>
 
 <!--<p><input type="checkbox" id="accordion-toggle"><label for="accordion-toggle">Keep animations but remove auto-collapse effect </label></p>-->
-<canvas id="cas" position : absolute;z-index : -1;></canvas>
+<!--<canvas id="cas" position : absolute;z-index : -1;></canvas>-->
 <div class="container collapse">
     <details>
         <summary>乌托邦式的单工协议</summary>
