--- a/html/atFault.html
+++ b/html/atFault.html
@@ -23,9 +23,12 @@
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>假设正常传输到5号帧时，5号帧在传输过程中丢失了，之后会发生什么？<br></p>
     <form>
-        <input type="radio" id="selection1" value="我是选项1" name="ques">发送方等待计时器超时后重传五号帧<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">发送方立刻重传五号帧<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">发送方不管五号帧继续往下发<br><br>
+        <label for="selection1">A: 发送方等待计时器超时后重传五号帧</label>
+        <input type="radio" id="selection1" value="我是选项1" name="ques"><br>
+        <label for="selection2">B: 发送方立刻重传五号帧</label>
+        <input type="radio" id="selection2" value="我是选项2" name="ques"><br>
+        <label for="selection3">C: 发送方不管五号帧继续往下发</label>
+        <input type="radio" id="selection3" value="我是选项3" name="ques"><br><br>
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
@@ -76,7 +79,7 @@
 
     <img id="lost" class="lost" src="../images/lost.jpg">
 -->
-    <video src="../video/atFault1.mp4" id="video" class="video"></video>
+    <video src="../video/atFault1.mp4" id="video" class="video" onended="show_question()"></video>
 
 </div>
 
@@ -147,7 +150,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.atFault()) {
                 triggerRightPanels();
-                isPlaying = true;
+                $("#video").play();
             }
         }, 500);
     }
