--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -22,9 +22,12 @@
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>这个模型与之前看到的乌托邦式的模型有区别吗<br></p>
     <form>
-        <input type="radio" id="selection1" value="我是选项1" name="ques">没有任何区别<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">因为信道不再保证无错，所以接收方回传了确认帧，只不过没有出现错误所以看起来两个差不多<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">多了个确认帧，但实际上没区别<br><br>
+        <label for="selection1">A: 没有任何区别</label>
+        <input type="radio" id="selection1" value="我是选项1" name="ques"><br>
+        <label for="selection2">B: 因为信道不再保证无错，所以接收方回传了确认帧，只不过没有出现错误所以看起来两个差不多</label>
+        <input type="radio" id="selection2" value="我是选项2" name="ques"><br>
+        <label for="selection3">C: 多了个确认帧，但实际上没区别</label>
+        <input type="radio" id="selection3" value="我是选项3" name="ques"><br><br>
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
@@ -63,7 +66,7 @@
     <img id="affirm7" class="affirm" src="../images/affirm.png">
     <img id="affirm8" class="affirm" src="../images/affirm.png">
 -->
-    <video src="../video/nowrong1.mp4" id="video" class="video"></video>
+    <video src="../video/nowrong1.mp4" id="video" class="video" onended="show_question()"></video>
 
 </div>
 
@@ -130,7 +133,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.noWrong()) {
                 triggerRightPanels();
-                isPlaying = true;
+                $("#video").play();
             }
         }, 500);
     }
