--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -23,13 +23,15 @@
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>动画中七号帧的确认帧丢失，当发送方收到八号帧的确认帧时，发送方的发送窗口的下界应该在几号帧的位置？<br></p>
     <form>
-        <input type="radio" id="selection1" value="我是选项1" name="ques">七号帧<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">八号帧<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">九号帧<br><br>
+        <label for="selection1">A: 七号帧</label>
+        <input type="radio" id="selection1" value="我是选项1" name="ques"><br>
+        <label for="selection2">B: 八号帧</label>
+        <input type="radio" id="selection2" value="我是选项2" name="ques"><br>
+        <label for="selection3">C: 九号帧</label>
+        <input type="radio" id="selection3" value="我是选项3" name="ques"><br><br>
     </form>
     <p id="error" style="font-size: 18px"></p>
 </div>
-<body>
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
     <p>在回退N协议中，三号帧在传输过程中丢失，触发计时器超时，导致发送方重传3,4,5三个帧</p>
     <p>七号帧的确认帧在传输过程中丢失，但八号帧确认帧顺利到达，由于累计确认原则，认为七号帧已送达，传输正常进行。</p>
@@ -90,7 +92,7 @@
     
     <img id="lost" class="lost" src="../images/lost.jpg">
 -->
-    <video src="../video/rollbackN1.mp4" id="video" class="video"></video>
+    <video src="../video/rollbackN1.mp4" id="video" class="video" onended="show_question()"></video>
     </div>
 <div id="actions" class="panel">
     <p id="rollbackN" onclick=rollbackN()>创建</p>
@@ -159,7 +161,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.rollbackN()) {
                 triggerRightPanels();
-                isPlaying = true;
+                $("#video").play();
             }
         }, 500);
     }
