--- a/html/beginning.html
+++ b/html/beginning.html
@@ -23,8 +23,8 @@
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
     <p>下面这个动画由于是在绝对无错信道上传输，因此不会发生任何错误。</p>
-    <p>从下向上发的砖头代表“帧”，因为不会有错误，不需要“确认帧”。</p>
-    <p>右侧是传输过程的伪代码</p>
+    <p>因为不会有错误，不需要“确认帧”。</p>
+    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
 </div>
 
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
@@ -42,6 +42,29 @@
 
 <div class="top-bar">
     <h1>乌托邦式的单工协议</h1>
+    <div class="navBar">
+        <ul class="nav">
+            <li>其他协议
+                <ul class="sub">
+                    <li>链路层介绍</li>
+                    <li>无错停等</li>
+                    <li>有错停等</li>
+                    <li>滑动窗口</li>
+                    <li>回退N</li>
+                    <li>选择重传</li>
+                </ul>
+            </li>
+            <li>本协议相关
+                <ul class="sub">
+                    <li>文档</li>
+                    <li>视频</li>
+                    <li>提示</li>
+                    <li>故事引入</li>
+                </ul>
+            </li>
+        </ul>
+
+    </div>
 </div>
 <div id="box">
 <!--
