--- a/html/pre_beginning.html
+++ b/html/pre_beginning.html
@@ -47,10 +47,10 @@
             由于一些原因，虽然我们身处异地，但是我需要给你送"砖头"。
         </p>
         <p id="dia_mon_1" class="dialog-text-monkey" hidden>
-            没错，而且可能你很难相信，但是只要出错了我们就会失业了。
+            没错，而且可能你很难相信，但是只要出错了我们就要失业了。
         </p>
         <p id="dia_mon_2" class="dialog-text-monkey" hidden>
-            没关系，第一次送，有人给我们确保了一个绝对不会出错的完美"路线"，你只管放心收好传过来的"砖头"就行了。
+            没关系，<b>第一次送，有人给我们确保了一个绝对不会出错的完美"路线"，你只管放心收好传过来的"砖头"就行了。</b>
         </p>
     </div>
 
