--- a/html/selective_repeat.html
+++ b/html/selective_repeat.html
@@ -33,13 +33,11 @@
     </form>
     <p id="error" style="font-size: 18px"></p>
 </div>
-<body>
+
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在选择回传协议中，发送方与接收方都维护一个窗口，分别表示能发送的帧和能接受的帧。只要出现在接收窗口内的帧，接收方都会接受并缓存，等全部到达后转交网络层。<br></p>
     <p>动画中三号帧丢失触发超时，接收方收下到达的4,5号帧，并在收到发送方重传的三号帧后，两方的窗口下限同时移到六号帧。<br></p>
-    <p>同样，接收方七号帧的确认帧丢失，触发超时，但是收下八号帧。并在收到重传的七号帧后，再次回传七号帧的确认帧，发送方收到确认帧后，双方的窗口下限同时移到九号帧</p>
-    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
-    <p>右侧是传输过程的伪代码</p>
+    <p>接收方七号帧的确认帧丢失，触发超时，收下八号帧。并在收到重传的七号帧后，再次回传七号帧的确认帧</p>
+    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
 </div>
 
 <div class="top-bar">
