--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -20,7 +20,6 @@
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
-<body>
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>这个模型与之前看到的有错信道的停等协议一样吗？<br></p>
     <form>
@@ -35,11 +34,9 @@
 </div>
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在一位滑动窗口协议中，发送方和接收方的窗口大小均为1。发送方只能发送在窗口内的帧，接收方只接受在窗口内的帧。</p>
-    <p>在这个协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
+    <p>在这个动画中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
     <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
-    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
-    <p>右侧是传输过程的伪代码</p>
+    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
 </div>
 <div class="top-bar">
     <h1>一位滑动窗口协议</h1>
