--- a/html/atFault.html
+++ b/html/atFault.html
@@ -35,8 +35,7 @@
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
     <p>在有错信道停等协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
     <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
-    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
-    <p>右侧是传输过程的伪代码</p>
+    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
 </div>
 <div class="top-bar">
     <h1>有错信道上的单工停-等协议</h1>
