--- a/html/pre_nowrong.html
+++ b/html/pre_nowrong.html
@@ -48,13 +48,10 @@
     <div class="dialog-block-monkey">
         <img src="../images/dialog-r.png" style="height: 28vh; width: 30vw">
         <p id="dia_mon_0" class="dialog-text-monkey">
-            这次用来传"砖头"的信道似乎不能保证无错了。
+            这次用来传"砖头"的信道似乎<b>不能保证无错了。</b>
         </p>
         <p id="dia_mon_1" class="dialog-text-monkey" hidden>
             就是理论上不会出错，但万一出错，我们就完了。
-        </p>
-        <p id="dia_mon_2" class="dialog-text-monkey" hidden>
-            好，那就这么办，没有错的话我就一直发了。
         </p>
     </div>
 
@@ -64,7 +61,7 @@
             这是什么意思？
         </p>
         <p id="dia_dog_1" class="dialog-text-dog" hidden>
-            那我每次收到砖头就跟你说一声，确认一下，收到确认你再发新的吧。慢慢来这样就不会出错了吧。
+            那我<b>每次收到砖头就跟你确认一次，收到确认再发新的吧。</b>
         </p>
     </div>
 </div>
@@ -86,12 +83,8 @@
             $("#dia_dog_0").fadeOut();
             $("#dia_dog_1").fadeIn();
         }if (flag == 3) {
-            $("#dia_mon_1").fadeOut();
-            $("#dia_mon_2").fadeIn();
-        }if (flag == 4) {
             window.location.href=("nowrong.html");
         }
-
         flag++;
     })
 </script>
