--- a/new-index.html
+++ b/new-index.html
@@ -1,89 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <!--核心-->
+    <link rel="stylesheet" href="css3-svg-circle-menu/css/style.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style type="text/css">
+        * { margin:0; padding:0; }
+        body { position:relative; width:100%; height:100%; overflow:hidden; }
+
+    </style>
+    <script type="application/javascript" src="js/jquery.min.js"></script>
+    <!--<script type="application/javascript" src="js/index.js"></script>-->
+
     <title>计网链路层模型可视化（小课堂）</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/style-index.css">
-
 </head>
-<body>
-
-<h1>计网链路层模型可视化（小课堂）</h1>
-<p>本站为想要了解计算机网络链路层模型的一般学生，以及想要直观理解链路层模型的计算机专业学生提供一个可视化的动画展示与教学。</p>
-<p>我们将以一个虚拟的卡通故事为主线，融合动画演示，来解释每一个链路层的模型。</p>
-<p>（程序猿和程序狗因为老板的蛮横的命令，在北京的程序猿必须给在上海的程序狗送砖头过去才行，他们需要保证不出任何差错地完成任务，还需要满足老板日益增加的效率需求。）</p>
-
-<!--<p><input type="checkbox" id="accordion-toggle"><label for="accordion-toggle">Keep animations but remove auto-collapse effect </label></p>-->
-<canvas id="cas" style="position : absolute;z-index : -1;"></canvas>
-<div class="container collapse">
-    <details>
-        <summary>乌托邦式的单工协议</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_1()">
-                <p>这是对于网络传输理想化的模型，认为在传输过程中，不会出现任何通信错误，即所有帧都可以不发生任何错误地按序抵达接收方。</p>
-                <p>在这种情况下，发送方只需要一个接一个的发送自己的帧，接收方只需要负责接收，不需要回传确认帧进行确认。</p>
-            </div>
+<div class="main">
+    <div class="navigation-circle">
+        <div class="navigation-circle__inner">
+            <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320;">
+                <circle cx="160" cy="160" r="158" fill="none" stroke-width="1" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dashoffset:0;stroke-dasharray:none;"></circle>
+            </svg>
+            <svg class="navigation-circle-svg navigation-circle-svg--mask" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320;">
+                <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="2" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
+            </svg>
+            <ul class="navigation-circle__list">
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(1)" onmouseenter="calculateOffset(1)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">乌托邦式的单工协议
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(2)" onmouseenter="calculateOffset(2)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">无错信道上的单工停-等
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(3)" onmouseenter="calculateOffset(3)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">有错停等
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(4)" onmouseenter="calculateOffset(4)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">一位滑动窗口协议
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(5)" onmouseenter="calculateOffset(5)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">回退N协议
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(6)" onmouseenter="calculateOffset(6)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">选择重传协议
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点击这里前往动画演示</h4>
+                    </div></a></li>
+                <li class="navigation-circle-list-item"><a class="navigation-circle-list-item__point" onClick="onClick(7)" onmouseenter="calculateOffset(7)" onMouseLeave="onMouseLeave()">
+                    <div class="navigation-circle-list-item__meta">
+                        <h3 class="navigation-circle-list-item__title">从头开始
+                        </h3>
+                        <h4 class="navigation-circle-list-item__subtitle">点这里</h4>
+                    </div></a></li>
+            </ul>
         </div>
-    </details>
-    <details>
-        <summary>无错信道上的单工停-等协议</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_2()">
-                <p>这个协议在之前的理想化模型的基础上，引入了确认帧的机制。每当接收方收到一帧，就马上发送一帧确认帧用于确认。</p>
-                <p>发送方在发送一帧之后，便设定一个定时器，只有在收到确认帧的情况下，才能继续下一帧的发送，而如果没有收到确认帧，就一直等到定时器超时，然后重新发送该帧。</p>
-                <p>设置定时器是为了避免在确认帧或自己发送的帧超时的情况下，不会陷入一直在等待的死锁情况。</p>
-            </div>
-        </div>
-    </details>
-    <details>
-        <summary>有错停等</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_3()">
-                <p>这个协议同样是在之前的理想化模型的基础上，引入了确认帧的机制。每当接收方收到一帧，就马上发送一帧确认帧用于确认。</p>
-                <p>与上一种协议的主要区别，在于它是一个双工信道，也就是说实际情况下，接收方也可以给发送方发送数据帧，而确认帧有时可以携带在数据帧中一起发送，可以少发送一些帧</p>
-            </div>
-        </div>
-    </details>
-    <details>
-        <summary>一位滑动窗口协议</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_4()">
-                <p>在有错停等的基础上，又有了进一步的改进。发送方发送所有在发送窗口中的帧，而接收方会接收所有在接收窗口的帧。双方会在传输之前对窗口大小进行协商接收窗口取决于接收方的缓存大小，发送窗口则用于控制传输速率。</p>
-                <p>在一位滑动窗口中，接收方与发送方的窗口大小均为一，这种情况与之前的有错停等基本相同，但是内在的思想不同。这种窗口的思想可以通过调整窗口大小，达到提高或控制传输效率等作用。</p>
-            </div>
-        </div>
-    </details>
-    <details>
-        <summary>回退N协议</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_5()">
-                <p>在一位活动窗口的基础上进行了改进。在这种情况下，发送方的窗口大小为n(n>1)，而接收方的窗口大小为1.</p>
-                <p>发送方一次性将窗口内的帧全部发送，并在收到确认帧后可以向后移动发送窗口。接收方每接收到正确的帧，也向后移动一位接收窗口。在发送方对确认帧的处理方法中，可以使用累计确认来移动发送窗口。</p>
-                <p>之所以叫做回退N，是由于发送方对于定时器超时的处理方法导致的。因为一次会将发送窗口内的所有帧发送出去，而当正确的帧出现错误时，接收方会丢弃所有其他的帧，发送方因此在超时后需要重新将发送窗口内的所有帧全部重发一遍。</p>
-            </div>
-        </div>
-    </details>
-    <details>
-        <summary>选择回传协议</summary>
-        <div class="details-wrapper">
-            <div class="details-styling" onclick="navigate_6()">
-                <p>在回退N协议的基础上进行了改进。在这种情况下，发送方的窗口大小为n(n>1)，而接收方的窗口大小为m(m>1).</p>
-                <p>发送方一次性将窗口内的帧全部发送，并在收到确认帧后可以向后移动发送窗口。接收方会接收处在接收窗口内的所有帧，当不是按照顺序到达时，会将帧缓存起来，等待所有帧按照顺序到达后再转交给网络层。</p>
-                <p>对于发送方，当发送出现错误的情况，不需要再重发所有的帧，而只需要重发出现错误的帧即可。对于接收方，由于会接收非按序到达的帧，因此不能再使用累计确认。相反，使用否定确认通知发送方重发错误的帧。</p>
-            </div>
-        </div>
-    </details>
+    </div>
 </div>
 
-<p>点击文本区域即可前往动画演示。</p>
-
-<script  src="js/index.js"></script>
-<script src="js/navigate.js"></script>
-<script src="js/background.js"></script>
-
+<script src="css3-svg-circle-menu/js/index.js"></script>
 </body>
 </html>
+
