--- a/new-index.html
+++ b/new-index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <!--核心-->
     <link rel="stylesheet" href="css3-svg-circle-menu/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style type="text/css">
         * { margin:0; padding:0; }
@@ -14,6 +15,9 @@
 
     <title>计网链路层模型可视化（小课堂）</title>
 </head>
+<body>
+<canvas id="cas" style="position : absolute;z-index : -1;"></canvas>
+<script src="js/background.js"></script>
 <div class="main">
     <div class="navigation-circle">
         <div class="navigation-circle__inner">
