--- a/html/atFault.html
+++ b/html/atFault.html
@@ -40,7 +40,31 @@
 <div class="top-bar">
     <h1>有错信道上的单工停-等协议</h1>
 </div>
+<div class="navBar">
+    <ul class="nav">
+        <li><a href="#">首页</a></li>
+        <li id="about"><a id="others" href="#" >其他协议</a>
+            <ul class="sub">
+                <li><a href="../html/beginning.html">乌托邦式协议</a></li>
+                <li><a href="../html/nowrong.html">无错停等协议</a></li>
+                <li><a href="../html/slidingWindow.html">滑动窗口协议</a></li>
+                <li><a href="../html/rollbackN.html">回退N帧协议</a></li>
+                <li><a href="../html/selective_repeat.html">选择重传协议</a></li>
+            </ul>
+        </li>
+        <li id="about"><a href="#">本协议</a>
+            <ul class="sub">
+                <li><a href="#">文字介绍</a></li>
+                <li><a href="#">视频教学</a></li>
+                <li><a href="#">数据链路层</a></li>
+                <li><a href="#">本页面说明</a></li>
+            </ul>
+        </li>
 
+    </ul>
+
+</div>
+</div>
 <div id="box">
 <!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
