--- a/html/beginning.html
+++ b/html/beginning.html
@@ -44,24 +44,25 @@
     <h1>乌托邦式的单工协议</h1>
     <div class="navBar">
         <ul class="nav">
-            <li>其他协议
+            <li><a href="#">首页</a></li>
+            <li id="about"><a id="others" href="#" >其他协议</a>
                 <ul class="sub">
-                    <li>链路层介绍</li>
-                    <li>无错停等</li>
-                    <li>有错停等</li>
-                    <li>滑动窗口</li>
-                    <li>回退N</li>
-                    <li>选择重传</li>
+                    <li><a href="../html/nowrong.html">无错停等协议</a></li>
+                    <li><a href="../html/atFault.html">有错停等协议</a></li>
+                    <li><a href="../html/slidingWindow.html">滑动窗口协议</a></li>
+                    <li><a href="../html/rollbackN.html">回退N帧协议</a></li>
+                    <li><a href="../html/selective_repeat.html">选择重传协议</a></li>
                 </ul>
             </li>
-            <li>本协议相关
+            <li id="about"><a href="#">本协议</a>
                 <ul class="sub">
-                    <li>文档</li>
-                    <li>视频</li>
-                    <li>提示</li>
-                    <li>故事引入</li>
+                    <li><a href="#">文字介绍</a></li>
+                    <li><a href="#">视频教学</a></li>
+                    <li><a href="#">数据链路层</a></li>
+                    <li><a href="#">本页面说明</a></li>
                 </ul>
             </li>
+
         </ul>
 
     </div>
