--- a/html/new-beginning.html
+++ b/html/new-beginning.html
@@ -41,7 +41,7 @@
 <div id="box">
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
-    <div id="video1"><video id="video" src="../video/prefect.mp4" onended="show_question()"></video></div>
+    <div id="video1"><video id="video" src="../video/prefect3.8.mp4" onended="show_question()"></video></div>
     
 
 </div>
