--- a/html/beginning.html
+++ b/html/beginning.html
@@ -56,10 +56,10 @@
             </li>
             <li id="about"><a href="#">本协议</a>
                 <ul class="sub">
-                    <li><a href="#">文字介绍</a></li>
+                    <li><a href="1.html">文字介绍</a></li>
                     <li><a href="#">视频教学</a></li>
-                    <li><a href="#">数据链路层</a></li>
-                    <li><a href="#">本页面说明</a></li>
+                    <li><a href="https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E9%93%BE%E8%B7%AF%E5%B1%82">数据链路层</a></li>
+                    <li onclick="show_dialog()"><a href="#">本页面说明</a></li>
                 </ul>
             </li>
 
@@ -84,7 +84,7 @@
     <img id="blocks8" class="blocks" src="../images/blocks.png">
 -->
     <video id="video" class="video" onended="show_question()">
-        <source src="../video/prefect1.mp4" type="video/mp4">
+        <source src="../video/prefect3.8.mp4" type="video/mp4">
     </video>
 
 </div>
