--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -53,10 +53,10 @@
         </li>
         <li id="about"><a href="#">本协议</a>
             <ul class="sub">
-                <li><a href="#">文字介绍</a></li>
+                <li><a href="2.html">文字介绍</a></li>
                 <li><a href="#">视频教学</a></li>
-                <li><a href="#">数据链路层</a></li>
-                <li><a href="#">本页面说明</a></li>
+                <li><a href="https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E9%93%BE%E8%B7%AF%E5%B1%82">数据链路层</a></li>
+                <li onclick="show_dialog()"><a href="#">本页面说明</a></li>
             </ul>
         </li>
 
@@ -90,7 +90,7 @@
     <img id="affirm7" class="affirm" src="../images/affirm.png">
     <img id="affirm8" class="affirm" src="../images/affirm.png">
 -->
-    <video src="../video/nowrong1.mp4" id="video" class="video" onended="show_question()"></video>
+    <video src="../video/nowrong3.8.mp4" id="video" class="video" onended="show_question()"></video>
 
 </div>
 
