--- a/html/selective_repeat.html
+++ b/html/selective_repeat.html
@@ -57,10 +57,10 @@
         </li>
         <li id="about"><a href="#">本协议</a>
             <ul class="sub">
-                <li><a href="#">文字介绍</a></li>
+                <li><a href="6.html">文字介绍</a></li>
                 <li><a href="#">视频教学</a></li>
-                <li><a href="#">数据链路层</a></li>
-                <li><a href="#">本页面说明</a></li>
+                <li><a href="https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E9%93%BE%E8%B7%AF%E5%B1%82">数据链路层</a></li>
+                <li onclick="show_dialog()"><a href="#">本页面说明</a></li>
             </ul>
         </li>
 
@@ -118,7 +118,7 @@
     <!--<img id="no2" class="no" src="../images/no.png">-->
     <!---->
     <!--<img id="lost" class="lost" src="../images/lost.jpg">-->
-    <video src="../video/select.mp4" id="video" class="video" onended="show_question()"></video>
+    <video src="../video/repeat3.8.mp4" id="video" class="video" onended="show_question()"></video>
     </div>
 <div id="actions" class="panel">
     <p id="selective_repeat" onclick=selective_repeat()>创建</p>
