--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -64,7 +64,7 @@
     </ul>
 
 </div>
-<div id="box">
+<!--<div id="box">-->
 <!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
@@ -115,49 +115,49 @@
     
     <img id="lost" class="lost" src="../images/lost.jpg">
 -->
-    <video src="../video/rollbackN1.mp4" id="video" class="video" onended="show_question()"></video>
-    </div>
+    <video src="../video/rollback3.8.mp4" id="video" class="video" onended="show_question()"></video>
+    <!--</div>-->
 <div id="actions" class="panel">
     <p id="rollbackN" onclick=rollbackN()>创建</p>
 </div>
-<div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
+<!--<div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>-->
 
-<div class="receive">
-    <div id="status_r" class="panel status status_r"><p></p></div>
-    <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
-    <!--伪代码部分-->
-    <div id="codetrace_r"class="panel codetrace codetrace_r">
-        <p id="code11" style="padding-top: 5px;">while(等待事件){</p>
-        <p id="code12">&nbsp;&nbsp;if( 期望帧到达 ）</p>
-        <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;接收该帧 i++</p>
-        <p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;将窗口下限移至第一个未接收的帧处</p>
-        <p id="code16">&nbsp;&nbsp;else if ( 到达帧不是期望帧 )丢弃该帧</p>
-        <p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>
-    </div>
-    <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
-        <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
-</div>
+<!--<div class="receive">-->
+    <!--<div id="status_r" class="panel status status_r"><p></p></div>-->
+    <!--<div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace_r"class="panel codetrace codetrace_r">-->
+        <!--<p id="code11" style="padding-top: 5px;">while(等待事件){</p>-->
+        <!--<p id="code12">&nbsp;&nbsp;if( 期望帧到达 ）</p>-->
+        <!--<p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;接收该帧 i++</p>-->
+        <!--<p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;将窗口下限移至第一个未接收的帧处</p>-->
+        <!--<p id="code16">&nbsp;&nbsp;else if ( 到达帧不是期望帧 )丢弃该帧</p>-->
+        <!--<p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">-->
+        <!--<img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>-->
+<!--</div>-->
 
 
-<div class="send">
-    <div id="status" class="panel status status_s"><p></p></div>
-    <div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>
-    <!--伪代码部分-->
-    <div id="codetrace" class="panel codetrace codetrace_s">
-        <p id="code1" style="padding-top: 5px;">do{</p>
-        <p id="code2">&nbsp;&nbsp;依次发送窗口内所有的帧</p>
-        <p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>
-        <p id="code4">&nbsp;&nbsp;if（ 规定时间内收到期望的确认帧 )</p>
-        <p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;发送窗口滑动至该帧后</p>
-        <p id="code6">&nbsp;&nbsp;&nbsp;&nbsp;停止窗口外计时器</p>
-        <p id="code7">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ){ </p>
-        <p id="code8">&nbsp;&nbsp;&nbsp;&nbsp;重发超时帧及其后的N帧,并重设计时器</p>
-        <p id="code9">&nbsp;&nbsp;else if (收到非期望确认帧)丢弃该帧</p>
-        <p id="code10" style="padding-bottom: 10px;">}while ( 还需继续发送帧 )</p>
-    </div>
-    <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
-        <img src="./../images/arrow_white_right.png"></div>
-</div>
+<!--<div class="send">-->
+    <!--<div id="status" class="panel status status_s"><p></p></div>-->
+    <!--<div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace" class="panel codetrace codetrace_s">-->
+        <!--<p id="code1" style="padding-top: 5px;">do{</p>-->
+        <!--<p id="code2">&nbsp;&nbsp;依次发送窗口内所有的帧</p>-->
+        <!--<p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>-->
+        <!--<p id="code4">&nbsp;&nbsp;if（ 规定时间内收到期望的确认帧 )</p>-->
+        <!--<p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;发送窗口滑动至该帧后</p>-->
+        <!--<p id="code6">&nbsp;&nbsp;&nbsp;&nbsp;停止窗口外计时器</p>-->
+        <!--<p id="code7">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ){ </p>-->
+        <!--<p id="code8">&nbsp;&nbsp;&nbsp;&nbsp;重发超时帧及其后的N帧,并重设计时器</p>-->
+        <!--<p id="code9">&nbsp;&nbsp;else if (收到非期望确认帧)丢弃该帧</p>-->
+        <!--<p id="code10" style="padding-bottom: 10px;">}while ( 还需继续发送帧 )</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">-->
+        <!--<img src="./../images/arrow_white_right.png"></div>-->
+<!--</div>-->
 
 <div class="left-bar"></div>
 <div class="right-bar"></div>
