--- a/html/beginning.html
+++ b/html/beginning.html
@@ -45,7 +45,7 @@
     <div class="navBar">
         <ul class="nav">
             <li><a href="#">首页</a></li>
-            <li id="about"><a id="others" href="#" >其他协议</a>
+            <li id="about1"><a id="others" href="#" >其他协议</a>
                 <ul class="sub">
                     <li><a href="../html/nowrong.html">无错停等协议</a></li>
                     <li><a href="../html/atFault.html">有错停等协议</a></li>
@@ -94,35 +94,35 @@
 </div>
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
 
-<div class="receive">
-    <div id="status_r" class="panel status status_r"><p></p></div>
-    <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
-    <!--伪代码部分-->
-    <div id="codetrace_r"class="panel codetrace codetrace_r">
-        <p id="code11" style="padding-top: 10px;">while(等待帧){</p>
-        <p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>
-        <p id="code13">&nbsp;&nbsp;&nbsp;&nbsp;接收这个帧传给网络层</p>
-        <p id="code14">}</p>
-    </div>
-    <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
-        <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
-</div>
+<!--<div class="receive">-->
+    <!--<div id="status_r" class="panel status status_r"><p></p></div>-->
+    <!--<div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace_r"class="panel codetrace codetrace_r">-->
+        <!--<p id="code11" style="padding-top: 10px;">while(等待帧){</p>-->
+        <!--<p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>-->
+        <!--<p id="code13">&nbsp;&nbsp;&nbsp;&nbsp;接收这个帧传给网络层</p>-->
+        <!--<p id="code14">}</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">-->
+        <!--<img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>-->
+<!--</div>-->
 
 
-<div class="send">
-    <div id="status" class="panel status status_s"><p></p></div>
-    <div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>
-    <!--伪代码部分-->
-    <div id="codetrace" class="panel codetrace codetrace_s">
-        <p id="code1" style="padding-top: 10px;">第一个帧的序号为 i = 1 </p>
-        <p id="code2">do{</p>
-        <p id="code3">&nbsp;&nbsp;发送序号为 i 的帧</p>
-        <p id="code4">&nbsp;&nbsp;帧的序号 i++</p>
-        <p id="code5">}while ( 还有需要发送的帧 )</p>
-    </div>
-    <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
-        <img src="./../images/arrow_white_right.png"></div>
-</div>
+<!--<div class="send">-->
+    <!--<div id="status" class="panel status status_s"><p></p></div>-->
+    <!--<div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace" class="panel codetrace codetrace_s">-->
+        <!--<p id="code1" style="padding-top: 10px;">第一个帧的序号为 i = 1 </p>-->
+        <!--<p id="code2">do{</p>-->
+        <!--<p id="code3">&nbsp;&nbsp;发送序号为 i 的帧</p>-->
+        <!--<p id="code4">&nbsp;&nbsp;帧的序号 i++</p>-->
+        <!--<p id="code5">}while ( 还有需要发送的帧 )</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">-->
+        <!--<img src="./../images/arrow_white_right.png"></div>-->
+<!--</div>-->
 
 <div class="left-bar"></div>
 <div class="right-bar"></div>
@@ -148,7 +148,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.beginning()) {
                 triggerRightPanels();
-                $("#video").play()
+                isPlaying = true;
             }
         }, 500);
     }
