--- a/html/selective_repeat.html
+++ b/html/selective_repeat.html
@@ -46,7 +46,7 @@
 <div class="navBar">
     <ul class="nav">
         <li><a href="#">首页</a></li>
-        <li id="about"><a id="others" href="#" >其他协议</a>
+        <li id="about1"><a id="others" href="#" >其他协议</a>
             <ul class="sub">
                 <li><a href="../html/beginning.html">乌托邦式协议</a></li>
                 <li><a href="../html/nowrong.html">无错停等协议</a></li>
@@ -125,42 +125,42 @@
 </div>
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
 
-<div class="receive">
-    <div id="status_r" class="panel status status_r"><p></p></div>
-    <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
-    <!--伪代码部分-->
-    <div id="codetrace_r"class="panel codetrace codetrace_r">
-        <p id="code11" style="padding-top: 5px;">while(等待事件){</p>
-        <p id="code12">&nbsp;&nbsp;if( 期望帧到达 )</p>
-        <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;接收该帧,滑动接收窗口</p>
-        <p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;将缓存中与其连续的帧排序后交给网络层</p>
-        <p id="code16">&nbsp;&nbsp;else if ( 到达帧在接收窗口内 ) 缓存该帧</p>
-        <p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>
-    </div>
-    <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
-        <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
-</div>
+<!--<div class="receive">-->
+    <!--<div id="status_r" class="panel status status_r"><p></p></div>-->
+    <!--<div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace_r"class="panel codetrace codetrace_r">-->
+        <!--<p id="code11" style="padding-top: 5px;">while(等待事件){</p>-->
+        <!--<p id="code12">&nbsp;&nbsp;if( 期望帧到达 )</p>-->
+        <!--<p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;接收该帧,滑动接收窗口</p>-->
+        <!--<p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;将缓存中与其连续的帧排序后交给网络层</p>-->
+        <!--<p id="code16">&nbsp;&nbsp;else if ( 到达帧在接收窗口内 ) 缓存该帧</p>-->
+        <!--<p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">-->
+        <!--<img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>-->
+<!--</div>-->
 
 
-<div class="send">
-    <div id="status" class="panel status status_s"><p></p></div>
-    <div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>
-    <!--伪代码部分-->
-    <div id="codetrace" class="panel codetrace codetrace_s">
-        <p id="code1" style="padding-top: 5px;">do{</p>
-        <p id="code2">&nbsp;&nbsp;依次发送窗口内帧</p>
-        <p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>
-        <p id="code4">&nbsp;&nbsp;if（ 规定时间内收到期望的确认帧 )</p>
-        <p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;释放确认帧所占缓冲区，滑动发送窗口</p>
-        <p id="code6">&nbsp;&nbsp;&nbsp;&nbsp;停止窗口外帧的计时器</p>
-        <p id="code7">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ) </p>
-        <p id="code8">&nbsp;&nbsp;&nbsp;&nbsp;重发超时的计时器对应的帧,并重设计时器</p>
-        <p id="code9">&nbsp;&nbsp;else if ( 收到非期望确认帧 )丢弃该帧</p>
-        <p id="code10" style="padding-bottom: 10px;">}while ( 还有未传输成功的帧 )</p>
-    </div>
-    <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
-        <img src="./../images/arrow_white_right.png"></div>
-</div>
+<!--<div class="send">-->
+    <!--<div id="status" class="panel status status_s"><p></p></div>-->
+    <!--<div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace" class="panel codetrace codetrace_s">-->
+        <!--<p id="code1" style="padding-top: 5px;">do{</p>-->
+        <!--<p id="code2">&nbsp;&nbsp;依次发送窗口内帧</p>-->
+        <!--<p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>-->
+        <!--<p id="code4">&nbsp;&nbsp;if（ 规定时间内收到期望的确认帧 )</p>-->
+        <!--<p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;释放确认帧所占缓冲区，滑动发送窗口</p>-->
+        <!--<p id="code6">&nbsp;&nbsp;&nbsp;&nbsp;停止窗口外帧的计时器</p>-->
+        <!--<p id="code7">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ) </p>-->
+        <!--<p id="code8">&nbsp;&nbsp;&nbsp;&nbsp;重发超时的计时器对应的帧,并重设计时器</p>-->
+        <!--<p id="code9">&nbsp;&nbsp;else if ( 收到非期望确认帧 )丢弃该帧</p>-->
+        <!--<p id="code10" style="padding-bottom: 10px;">}while ( 还有未传输成功的帧 )</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">-->
+        <!--<img src="./../images/arrow_white_right.png"></div>-->
+<!--</div>-->
 
 <div class="left-bar"></div>
 <div class="right-bar"></div>
@@ -187,7 +187,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.selective_repeat()) {
                 triggerRightPanels();
-                $("#video").play();
+                isPlaying = true;
             }
         }, 500);
     }
