--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -48,7 +48,7 @@
 <div class="navBar">
     <ul class="nav">
         <li><a href="#">首页</a></li>
-        <li id="about"><a id="others" href="#" >其他协议</a>
+        <li id="about1"><a id="others" href="#" >其他协议</a>
             <ul class="sub">
                 <li><a href="../html/beginning.html">乌托邦式协议</a></li>
                 <li><a href="../html/nowrong.html">无错停等协议</a></li>
@@ -113,39 +113,39 @@
 </div>
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
 
-<div class="receive">
-    <div id="status_r" class="panel status status_r"><p></p></div>
-    <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
-    <!--伪代码部分-->
-    <div id="codetrace_r"class="panel codetrace codetrace_r">
-        <p id="code11" style="padding-top: 5px;">while(等待事件){</p>
-        <p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>
-        <p id="code13">&nbsp;&nbsp;&nbsp;&nbsp;if( 该帧为期望接收的帧 )</p>
-        <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接收该帧,提交给网络层,i++</p>
-        <p id="code16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;滑动接收窗口</p>
-        <p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>
-    </div>
-    <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
-        <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
-</div>
+<!--<div class="receive">-->
+    <!--<div id="status_r" class="panel status status_r"><p></p></div>-->
+    <!--<div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace_r"class="panel codetrace codetrace_r">-->
+        <!--<p id="code11" style="padding-top: 5px;">while(等待事件){</p>-->
+        <!--<p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>-->
+        <!--<p id="code13">&nbsp;&nbsp;&nbsp;&nbsp;if( 该帧为期望接收的帧 )</p>-->
+        <!--<p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接收该帧,提交给网络层,i++</p>-->
+        <!--<p id="code16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;滑动接收窗口</p>-->
+        <!--<p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">-->
+        <!--<img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>-->
+<!--</div>-->
 
 
-<div class="send">
-    <div id="status" class="panel status status_s"><p></p></div>
-    <div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>
-    <!--伪代码部分-->
-    <div id="codetrace" class="panel codetrace codetrace_s">
-        <p id="code1" style="padding-top: 5px;">do{</p>
-        <p id="code2">&nbsp;&nbsp;发送第 i 帧</p>
-        <p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>
-        <p id="code4">&nbsp;&nbsp;if（ 收到期望的确认帧 && 未超时 )</p>
-        <p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;滑动发送窗口，i++</p>
-        <p id="code7">&nbsp;&nbsp;清空计时器 </p>
-        <p id="code8" style="padding-bottom: 10px;">}while ( 还需继续发送帧 )</p>
-    </div>
-    <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
-        <img src="./../images/arrow_white_right.png"></div>
-</div>
+<!--<div class="send">-->
+    <!--<div id="status" class="panel status status_s"><p></p></div>-->
+    <!--<div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>-->
+    <!--&lt;!&ndash;伪代码部分&ndash;&gt;-->
+    <!--<div id="codetrace" class="panel codetrace codetrace_s">-->
+        <!--<p id="code1" style="padding-top: 5px;">do{</p>-->
+        <!--<p id="code2">&nbsp;&nbsp;发送第 i 帧</p>-->
+        <!--<p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>-->
+        <!--<p id="code4">&nbsp;&nbsp;if（ 收到期望的确认帧 && 未超时 )</p>-->
+        <!--<p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;滑动发送窗口，i++</p>-->
+        <!--<p id="code7">&nbsp;&nbsp;清空计时器 </p>-->
+        <!--<p id="code8" style="padding-bottom: 10px;">}while ( 还需继续发送帧 )</p>-->
+    <!--</div>-->
+    <!--<div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">-->
+        <!--<img src="./../images/arrow_white_right.png"></div>-->
+<!--</div>-->
 
 <div class="left-bar"></div>
 <div class="right-bar"></div>
@@ -172,7 +172,7 @@
         setTimeout( function() {
             if ((mode=="exploration")&&ly.SlidingWindow()) {
                 triggerRightPanels();
-                $("#video").play();
+                isPlaying = true;
             }
         }, 500);
     }
