change 6 description add link to 6 protocols video

--- a/html/atFault.html
+++ b/html/atFault.html
@@ -32,10 +32,14 @@
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
-<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在有错信道停等协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
-    <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
-    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
+<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%;">
+    <ul>
+        <li><p>在有错信道停等协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧；</p></li>
+        <li><p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧；</p></li>
+        <li><p>右侧是和传输过程同步的伪代码，<b>点击左下角的“创建”开始动画</b>。</p></li><br><br>
+
+        <font size="-1"><p>注：本协议的教学视频包含乌托邦协议、无错信道协议、有错信道协议三个协议<br>下方的按键从左到右依次为重新播放、向后看伪代码的一步、暂停/播放、向前看伪代码的一步、直接结束</font></p>
+    </ul>
 </div>
 <div class="top-bar">
     <h1>有错信道上的单工停-等协议</h1>
