--- a/html/beginning.html
+++ b/html/beginning.html
@@ -22,9 +22,12 @@
 <body>
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>下面这个动画由于是在绝对无错信道上传输，因此不会发生任何错误。</p>
-    <p>因为不会有错误，不需要“确认帧”。</p>
-    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
+    <ul>
+        <li><p>下面这个动画是在绝对无错的完美信道上传输，不会发生任何错误；</p></li>
+        <li><p>从下向上发的砖头代表“帧”；</p></li>
+        <li><p>右侧是和传输过程同步的伪代码，<b>点击左下角的“创建”开始动画</b>。</p></li><br><br>
+        <font size="-1"><p>注：本协议的教学视频包含乌托邦协议、无错信道协议、有错信道协议三个协议<br>下方的按键从左到右依次为重新播放、向后看伪代码的一步、暂停/播放、向前看伪代码的一步、直接结束</font></p>
+    </ul>
 </div>
 
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
