--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -33,9 +33,12 @@
     <p id="error" style="font-size: 18px"></p>
 </div>
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在回退N协议中，三号帧在传输过程中丢失，触发计时器超时，导致发送方重传3,4,5三个帧</p>
-    <p>七号帧的确认帧在传输过程中丢失，但八号帧确认帧顺利到达，由于累计确认原则，认为七号帧已送达，传输正常进行。</p>
-    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
+    <ul>
+        <li><p>在回退N协议中，三号帧在传输过程中丢失，触发计时器超时，导致发送方重传3,4,5三个帧；</p></li>
+        <li><p>七号帧的确认帧在传输过程中丢失，但八号帧确认帧顺利到达，由于累计确认原则，认为七号帧已送达，传输正常进行；</p></li>
+        <li><p>右侧是和传输过程同步的伪代码，<b>点击左下角的“创建”开始动画</b>。</p><br>
+            <font size="-1"><p>注：下方的按键从左到右依次为重新播放、向后看伪代码的一步、暂停/播放、向前看伪代码的一步、直接结束</font></p></li>
+    </ul>
 </div>
 <div class="top-bar">
     <h1>回退N协议</h1>
