--- a/html/selective_repeat.html
+++ b/html/selective_repeat.html
@@ -35,9 +35,12 @@
 </div>
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>动画中三号帧丢失触发超时，接收方收下到达的4,5号帧，并在收到发送方重传的三号帧后，两方的窗口下限同时移到六号帧。<br></p>
-    <p>接收方七号帧的确认帧丢失，触发超时，收下八号帧。并在收到重传的七号帧后，再次回传七号帧的确认帧</p>
-    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
+    <ul>
+        <li><p>动画中三号帧丢失触发超时，接收方收下到达的4,5号帧，并在收到发送方重传的三号帧后，两方的窗口同时移到六号帧；<br></p></li>
+        <li><p>接收方七号帧的确认帧丢失，触发超时，收下八号帧。并在收到重传的七号帧后，再次回传七号帧的确认帧；</p></li>
+        <li><p>右侧是和传输过程同步的伪代码，<b>点击左下角的“创建”开始动画</b>。</p><br>
+            <font size="-1"><p>注：下方的按键从左到右依次为重新播放、向后看伪代码的一步、暂停/播放、向前看伪代码的一步、直接结束</font></p></li>
+    </ul>
 </div>
 
 <div class="top-bar">
