--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -34,9 +34,13 @@
 </div>
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在这个动画中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
-    <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
-    <p>右侧是传输过程的伪代码，<b>点击“创建”开始动画</b></p>
+    <ul>
+        <li><p>在这个动画中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧；</p></li>
+        <li><p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧；</p></li>
+        <li><p>右侧是和传输过程同步的伪代码，<b>点击左下角的“创建”开始动画</b>。</p>
+        </li><br><br>
+        <font size="-1"><p>注：下方的按键从左到右依次为重新播放、向后看伪代码的一步、暂停/播放、向前看伪代码的一步、直接结束</font></p>
+    </ul>
 </div>
 <div class="top-bar">
     <h1>一位滑动窗口协议</h1>
