--- a/html/atFault.html
+++ b/html/atFault.html
@@ -46,7 +46,7 @@
 </div>
 <div class="navBar">
     <ul class="nav">
-        <li><a href="#">首页</a></li>
+        <li><a href="../new-index.html">首页</a></li>
         <li id="about1"><a id="others" href="#" >其他协议</a>
             <ul class="sub">
                 <li><a href="../html/beginning.html">乌托邦式协议</a></li>
