--- a/html/3.html
+++ b/html/3.html
@@ -8,6 +8,6 @@
 </style>
 <html>
 <body>
-<embed src="../3.pdf" width="100%" height="100%" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+<embed src="../pdf/3.pdf" width="100%" height="100%" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 </body>
 </html>
