--- a/html/beginning.html
+++ b/html/beginning.html
@@ -47,7 +47,7 @@
     <h1>乌托邦式的单工协议</h1>
     <div class="navBar">
         <ul class="nav">
-            <li><a href="#">首页</a></li>
+            <li><a href="../new-index.html">首页</a></li>
             <li id="about1"><a id="others" href="#" >其他协议</a>
                 <ul class="sub">
                     <li><a href="../html/nowrong.html">无错停等协议</a></li>
